1999-07-29  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* write.c (fixup_segment): Fix generic error check overflow test.

	* config/tc-i386.c (pe): Change %d to %ld, %x to %lx, and cast
	X_add_number to long.

Wed Jul 28 02:04:24 1999  "Jerry Quinn" <jquinn@nortelnetworks.com>

	* config/tc-hppa.c (pa_ip):  Add 'J' and 'K' code
	processing. 

1999-07-27  Ian Lance Taylor  <ian@zembu.com>

	* config/tc-sparc.h (tc_fix_adjustable): Don't adjust GOT, PLT, or
	VTABLE relocations.

1999-07-21  Mark Elbrecht  <snowball3@bigfoot.com>

	* config/te-go32.h (COFF_LONG_SECTION_NAMES): Define.

	* configure.bat: Remove; obsolete.
	* config/go32.cfg: Likewise.

1999-07-21  Brad M. Garcia  <bgarcia@fore.com>

	* configure.in (i386-*-vxworks*): New target.
	* configure: Rebuild.

1999-07-16  Jakub Jelinek  <jj@ultra.linux.cz>

	* doc/c-sparc.texi: Document .register and .nword pseudo-ops.

1999-07-16  Jakub Jelinek  <jj@ultra.linux.cz>

	* config/tc-sparc.c (sparc_ip): Allow OLO10 relocations
	on -64 and not pic.
	(output_insn): Put OLO10's secondary addend into tc_fix_data.
	(md_apply_fix3): Handle BFD_RELOC_SPARC_OLO10.
	(tc_gen_reloc): Return two relocs for OLO10, LO10 and SPARC13.
	* config/tc-sparc.h (RELOC_EXPANSION_POSSIBLE,
	MAX_RELOC_EXPANSION): Define.
	(TC_FIX_TYPE, TC_INIT_FIX_DATA, TC_FIX_DATA_PRINT): Likewise.

1999-07-16  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (intel_float_operand): Add prototype, make static.
	(md_assemble): Localize *exp variable to if (fake_zero_displacement)
	block.  Print a warning if an 8-bit or 16-bit constant
	displacement or immediate is truncated on output.
	(i386_immediate): Ensure Imm16 is always legal for a 16-bit mode
	immediate.
	(i386_operand): Disallow immediate jump absolute operand.

1999-07-15  Ian Lance Taylor  <ian@zembu.com>

	* configure.in: Bump version number to 2.9.5.
	* configure: Rebuild.

	* dwarf2dbg.c (dwarf2_gen_line_info): Don't assume that long long
	or %llx work.
